# plaid-python-adapter

./: .gitignore  MANIFEST.in  README.md  setup.cfg
plaid_python_adapter/: __init__.py  exceptions.py  plaid_adapter.py
