[metadata]
name = plaid-python-adapter
version = 0.1
author = Tejas Bhandari
description = Python library adapter for accessing Plaid APIs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Lenders-Cooperative/plaid-python-adapter
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
packages = plaid_python_adapter
python_requires = >=3.6
